Use pointer-events to fix container covering actions buttons on payment page
* Use pointer-events to fix information container covering actions buttons on
payment page

* Empty commit

--- a/client/legacy-styles/_packages.sass
+++ b/client/legacy-styles/_packages.sass
@@ -190,8 +190,10 @@
   position: absolute
   transition: height 0.5s
   width: 100%
+  pointer-events: none
 
   .package-selector__column
+    pointer-events: auto
     max-width: unset
     padding: 0
     margin: 0
